# cabal-fields

./: .stylish-haskell.yaml  README.md  cabal.project
cabal-fields/: LICENSE  cabal-fields.cabal
cabal-fields-dev/: cabal-fields-dev.cabal
cabal-fields-dev/demo/: cabal-fields-demo.hs
cabal-fields-dev/src/: Orphans.hs
cabal-fields-dev/src/CabalFields/Tokens/: PP.hs
cabal-fields-dev/tests/: cabal-fields-tests.hs
cabal-fields-dev/tests/Data/Functor/: Representable.hs
cabal-fields-ffi/: cabal-fields-ffi.cabal
cabal-fields-ffi/cbits/: cabalfields.c
cabal-fields-ffi/include/: cabalfields.h
cabal-fields-ffi/src/CabalFields/: FFI.hs
cabal-fields-ffi/src/CabalFields/FFI/: Hsc.hsc
cabal-fields/src/CabalFields/: Compat.hs  Conversion.hs  Decoding.hs  Encoding.hs  Tokens.hs
cabal-fields/src/CabalFields/Internal/: ERE.hs  Input.hs  Misc.hs  Sasha.hs
clib/: .gitignore  Makefile  cabalfields.c  cabalfields.h  demo.c  deps.mk  readfile.c  readfile.h
fixtures/errors/: err_ac.txt  err_an.txt  err_f0.txt  err_fg.txt  err_fl.txt  err_fn.txt  err_fq.txt  err_s0.txt  err_sa.txt  err_sg.txt  err_sl.txt  err_sq.txt  inconsistrent-indentation-b.txt  inconsistrent-indentation.txt  stackoverflow.txt
fixtures/ok/: begin-newlines.txt  comment.txt  comment_bi.txt  comment_f0.txt  comment_fg.txt  comment_fl.txt  comment_s0.txt  comment_sg.txt  comment_sl.txt  empty-sections.txt  eof_fg.txt  eof_fl.txt  eof_fn.txt  eof_fq.txt  eof_sa.txt  eof_sg.txt  eof_sl.txt  eof_sq.txt  indent.txt  multi-line-fields.txt  nested-sections-b.txt  nested-sections.txt  nl_fg.txt  nl_fl.txt  nl_sg.txt  nl_sl.txt  section-args.txt  semicolon-field.txt  semicolon-section.txt  simple-sections.txt  single-line-fields.txt
python/: Makefile  cabalfields-demo.py  cabalfields.c  cabalfields.h  cabalfieldsmodule.c  setup.py
