cabal-version:      2.4
name:               cabal-fields-dev
version:            0.1
author:             Oleg Grenrus
maintainer:         oleg.grenrus@iki.fi
synopsis:           cabal-fields development stuff
description:        cabal-fields development stuff: tests, examples
extra-source-files:
  fixtures/errors/*.txt
  fixtures/ok/*.txt

tested-with:        GHC ==9.2.8 || ==9.4.8 || ==9.6.5

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    CabalFields.Tokens.PP
    Orphans

  build-depends:
    , base          <5
    , cabal-fields
    , Cabal-syntax
    , tree-diff

executable cabal-fields-demo
  default-language: Haskell2010
  main-is:          cabal-fields-demo.hs
  hs-source-dirs:   demo
  build-depends:
    , base
    , bytestring
    , cabal-fields
    , cabal-fields-dev
    , cabal-fields-ffi
    , Cabal-syntax
    , optparse-applicative

test-suite cabal-fields-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          cabal-fields-tests.hs
  hs-source-dirs:   tests
  other-modules:    Data.Functor.Representable
  build-depends:
    , base
    , bytestring
    , cabal-fields
    , cabal-fields-dev
    , cabal-fields-ffi
    , cabal-install-parsers
    , Cabal-syntax
    , optics-core
    , tasty
    , tasty-hunit
    , tree-diff
