cabal-version:      2.4
name:               cabal-fields-ffi
version:            0.1
author:             Oleg Grenrus
maintainer:         oleg.grenrus@iki.fi
extra-source-files: include/cabalfields.h
tested-with:        GHC ==9.2.8 || ==9.4.8

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    CabalFields.FFI
    CabalFields.FFI.Hsc

  include-dirs:       include/
  c-sources:          cbits/cabalfields.c
  build-depends:
    , base          ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
    , bytestring
    , cabal-fields
    , Cabal-syntax  ^>=3.12.0.0
    , containers
    , lattices
    , parsec
    , primitive     ^>=0.8.0.0
    , sasha         ^>=0.2
    , word8set      ^>=0.1.1

  build-tool-depends: hsc2hs:hsc2hs ^>=0.68.8
