cabal-version: 2.4
name:          cabal-fields
version:       0.1
synopsis:      An alternative parser for .cabal like files
description:   An alternative parser for @.cabal@ like files.
license:       BSD-3-Clause
license-file:  LICENSE
category:      Data
author:        Oleg Grenrus
maintainer:    oleg.grenrus@iki.fi
homepage:      https://github.com/phadej/cabal-fields
bug-reports:   https://github.com/phadej/cabal-fields/issues
tested-with:   GHC ==9.2.8 || ==9.4.8

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-fields.git
  subdir:   cabal-fields

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    CabalFields.Compat
    CabalFields.Conversion
    CabalFields.Decoding
    CabalFields.Encoding
    CabalFields.Tokens

  exposed-modules:
    CabalFields.Internal.ERE
    CabalFields.Internal.Input
    CabalFields.Internal.Misc
    CabalFields.Internal.Sasha

  build-depends:
    , base          ^>=4.16.4.0 || ^>=4.17.0.0
    , bytestring
    , Cabal-syntax  ^>=3.12.0.0
    , containers
    , lattices
    , parsec
    , sasha         ^>=0.2
    , word8set      ^>=0.1.1

  -- for sasha helpers
  build-depends:    template-haskell
